6958221: java.awt.Font.getFamily() leads to JVM crash on Linux on JDK7 for "custom" fonts

Reviewed-by: igor, jgodinez